--- a/documentation/asciidoc/topics/con_client_connection_details.adoc
+++ b/documentation/asciidoc/topics/con_client_connection_details.adoc
@@ -15,15 +15,15 @@ The service hostname depends on how you expose {brandname} on the network or if 
 
 For clients running on {k8s}, you can use the name of the internal service that {ispn_operator} creates.
 
-For clients running outside {k8s}, the service hostname is the location URL if you use a load balancer.
-For a node port service, the service hostname is the node host name.
+For clients running outside {k8s}, the service hostname is the location URL if you use a `LoadBalancer` service.
+For a `NodePort` service, the service hostname is the node host name.
 For a route, the service hostname is either a custom hostname or a system-defined hostname.
 
 .Ports
 
-Client connections on {k8s} and through load balancers use port `11222`.
+Client connections on {k8s} and a through `LoadBalancer` service use port `11222`.
 
-Node port services use a port in the range of `30000` to `60000`.
+`NodePort` services use a port in the range of `30000` to `60000`.
 Routes use either port `80` (unencrypted) or `443` (encrypted).
 
 [role="_additional-resources"]
