--- a/documentation/asciidoc/topics/proc_exposing_loadbalancer.adoc
+++ b/documentation/asciidoc/topics/proc_exposing_loadbalancer.adoc
@@ -1,13 +1,13 @@
 [id='exposing-loadbalancer_{context}']
-= Exposing {brandname} through load balancers
+= Exposing {brandname} through a LoadBalancer service
 
 [role="_abstract"]
-Use a load balancer service to make {brandname} clusters available to clients running outside {k8s}.
+Use a `LoadBalancer` service to make {brandname} clusters available to clients running outside {k8s}.
 
 [NOTE]
 ====
 To access {brandname} with unencrypted Hot Rod client connections you must use
-a load balancer service.
+a `LoadBalancer` service.
 ====
 
 .Procedure
