--- a/documentation/asciidoc/topics/proc_exposing_nodeport.adoc
+++ b/documentation/asciidoc/topics/proc_exposing_nodeport.adoc
@@ -1,8 +1,8 @@
 [id='exposing-nodeport_{context}']
-= Exposing {brandname} through node ports
+= Exposing {brandname} through a NodePort service
 
 [role="_abstract"]
-Use a node port service to expose {brandname} clusters on the network.
+Use a `NodePort` service to expose {brandname} clusters on the network.
 
 .Procedure
 
