--- a/documentation/asciidoc/topics/proc_configuring_sites_manually.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites_manually.adoc
@@ -7,13 +7,10 @@ Manual cross-site connections are necessary in any scenario where access to the 
 
 .Prerequisites
 
-Manually connecting {brandname} clusters to form cross-site views requires predictable network locations for {brandname} services.
-
-You need to know the network locations before they are created, which requires you to:
-
-* Have the host names and ports for each {brandname} cluster that you plan to configure as a backup location.
-* Have the host name of the `<cluster-name>-site` service for any remote {brandname} cluster that is running on {k8s}. +
-You must use the `<cluster-name>-site` service to form a cross-site view between a cluster that {ispn_operator} manages and any other cluster.
+* Determine a suitable expose type for cross-site replication.
+* Ensure you have the correct host names and ports for each {brandname} cluster and each `<cluster-name>-site` service.
++
+Manually connecting {brandname} clusters to form cross-site views requires predictable network locations for {brandname} services, which means you need to know the network locations before they are created.
 
 .Procedure
 
@@ -22,8 +19,8 @@ You must use the `<cluster-name>-site` service to form a cross-site view between
 . Set the value of the `spec.service.sites.local.expose.type` field to either `NodePort` or `LoadBalancer`.
 . Optionally configure ports with the following fields:
 +
-* `spec.service.sites.local.expose.nodePort` if you use `NodePort`.
-* `spec.service.sites.local.expose.port` if you use `LoadBalancer`.
+* `spec.service.sites.local.expose.nodePort` if you use a `NodePort` service.
+* `spec.service.sites.local.expose.port` if you use a `LoadBalancer` service.
 +
 . Provide the name and static URL for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`, for example:
 +
