--- a/documentation/asciidoc/topics/proc_creating_cache_service.adoc
+++ b/documentation/asciidoc/topics/proc_creating_cache_service.adoc
@@ -4,6 +4,11 @@
 [role="_abstract"]
 Create {brandname} clusters with {cacheservice} pods for a volatile, low-latency data store with minimal configuration.
 
+[IMPORTANT]
+====
+{cacheservice} pods provide volatile storage only, which means you lose all data when you modify your `Infinispan` CR or update the version of your {brandname} cluster.
+====
+
 .Procedure
 
 . Create an `Infinispan` CR that sets `spec.service.type: Cache` and configures any other {cacheservice} resources.
