--- a/documentation/asciidoc/topics/con_operator_deployments.adoc
+++ b/documentation/asciidoc/topics/con_operator_deployments.adoc
@@ -2,16 +2,17 @@
 [id='infinispan-operator-deployments_{context}']
 = {ispn_operator} deployments
 
-When you install {ispn_operator}, it extends the Kubernetes API with Custom Resources (CR) for deploying and managing {brandname} clusters on {openshift}.
+When you install {ispn_operator}, it extends the Kubernetes API with Custom Resource Definitions (CRDs) for deploying and managing {brandname} clusters on {openshift}.
 
-To interact with {ispn_operator}, {openshiftshort} users apply Custom Resource Definitions (CRDs) through the {osweb} or `oc` client.
-{ispn_operator} listens for `Infinispan` CRs and automatically provisions native resources, such as StatefulSets and Secrets, in addition to any resources for your {brandname} deployment.
+To interact with {ispn_operator}, {openshiftshort} users apply Custom Resources (CRs) through the {osweb} or `oc` client.
+{ispn_operator} listens for `Infinispan` CRs and automatically provisions native resources, such as StatefulSets and Secrets, that your {brandname} deployment requires.
+{ispn_operator} also configures {brandname} services according to the specifications in `Infinispan` CRs, including the number of pods for the cluster and backup locations for cross-site replication.
 
 .Custom resources
 image::custom-resources.png[This illustration depicts how an {openshiftshort} user can pass custom resources to {ispn_operator}.]
 
 A single {ispn_operator} installation can manage multiple {brandname} clusters in separate namespaces.
-Each time an {openshiftshort} user applies CRDs to modify the deployment, {ispn_operator} applies the changes globally to all {brandname} clusters.
+Each time an {openshiftshort} user applies CRs to modify the deployment, {ispn_operator} applies the changes globally to all {brandname} clusters.
 
 .Operator-managed clusters
 image::operator-managed-clusters.png[This illustration depicts how {ispn_operator} manages multiple clusters on {openshiftshort}.]
