--- a/documentation/asciidoc/stories/assembly_cache_cr.adoc
+++ b/documentation/asciidoc/stories/assembly_cache_cr.adoc
@@ -8,7 +8,7 @@ Use `Cache` CRs to add cache configuration with {ispn_operator} and control how 
 
 include::{topics}/con_caches.adoc[leveloffset=+1]
 include::{topics}/con_cache_cr.adoc[leveloffset=+1]
-include::{topics}/proc_creating_caches_xml.adoc[leveloffset=+1]
+include::{topics}/proc_creating_caches.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_templates.adoc[leveloffset=+1]
 include::{topics}/proc_adding_cache_stores.adoc[leveloffset=+1]
 
