Allow the user to define annotations for created resources #1423

--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -31,6 +31,7 @@
 :schemaversion: 13.0
 :brandname: Infinispan
 :fullbrandname: Infinispan
+:subscription_name: infinispan
 :datagridservice: Data Grid Service
 :cacheservice: Cache Service
 
