--- a/documentation/asciidoc/topics/attributes/kubectl_cmds.adoc
+++ b/documentation/asciidoc/topics/attributes/kubectl_cmds.adoc
@@ -23,6 +23,7 @@ ifdef::community[]
 :oc_well_formed: kubectl wait --for condition=wellFormed --timeout=240s infinispan/{example_crd_name}
 :oc_create: kubectl create
 :oc_delete: kubectl delete
+:oc_edit: kubectl edit
 :kubectl_exec: kubectl exec -it {example_crd_name}-0 -- /bin/bash
 :describe_backup: kubectl describe Backup my-backup -n namespace
 :set_namespace: kubectl config set-context --current --namespace={example_namespace}
@@ -53,6 +54,7 @@ ifdef::downstream[]
 :oc_well_formed: oc wait --for condition=wellFormed --timeout=240s infinispan/{example_crd_name}
 :oc_create: oc create
 :oc_delete: oc delete
+:oc_edit: oc edit
 :kubectl_exec: oc rsh {example_crd_name}-0
 :describe_backup: oc describe Backup my-backup
 :oc_delete_pod: oc delete pod
